--- a/src/QtAES/res.qrc
+++ b/src/QtAES/res.qrc
@@ -1,5 +1,5 @@
 <RCC>
     <qresource prefix="/">
-        <file>src/unit_test/longText.txt</file>
+        <file>unit_test/longText.txt</file>
     </qresource>
 </RCC>
